--- a/hello-impl/pom.xml
+++ b/hello-impl/pom.xml
@@ -25,10 +25,6 @@
         </dependency>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
-            <artifactId>lagom-javadsl-persistence-cassandra_${scala.binary.version}</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-logback_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
@@ -41,14 +37,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.lightbend.lagom</groupId>
-            <artifactId>lagom-javadsl-kafka-broker_${scala.binary.version}</artifactId>
-        </dependency>
-        <!--        <dependency>
-                    <groupId>com.typesafe.conductr</groupId>
-                    <artifactId>${conductr.lib.name}</artifactId>
-                </dependency> -->
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
@@ -60,12 +48,12 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
-                        <descriptor>src/assembly/conductr-bundle.xml</descriptor>
+                        <descriptor>src/assembly/production-dist.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>conductr-bundle</id>
+                        <id>dist</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
@@ -79,13 +67,6 @@
                 <configuration>
                     <lagomService>true</lagomService>
                 </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>renameConductRBundle</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
