--- a/hello-impl/src/main/resources/application.conf
+++ b/hello-impl/src/main/resources/application.conf
@@ -1,9 +1,2 @@
 play.modules.enabled += com.lightbend.lagom.example.hello.impl.HelloModule
-
-lagom.persistence.ask-timeout = 10s
-
-hello.cassandra.keyspace = hello
-
-cassandra-journal.keyspace = ${hello.cassandra.keyspace}
-cassandra-snapshot-store.keyspace = ${hello.cassandra.keyspace}
-lagom.persistence.read-side.cassandra.keyspace = ${hello.cassandra.keyspace}
+play.modules.enabled += com.lightbend.lagom.example.hello.impl.ConfigurationServiceLocatorModule
