--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,6 @@
     <modules>
         <module>hello-api</module>
         <module>hello-impl</module>
-        <module>stream-api</module>
-        <module>stream-impl</module>
-        <module>integration-tests</module>
     </modules>
 
     <build>
@@ -74,11 +71,6 @@
                 <type>pom</type>
             </dependency>
             <dependency>
-                <groupId>com.typesafe.conductr</groupId>
-                <artifactId>${conductr.lib.name}</artifactId>
-                <version>1.4.7</version>
-            </dependency>
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.10</version>
@@ -90,6 +82,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <lagom.version>1.4.0-M3</lagom.version>
-        <conductr.lib.name>lagom10-conductr-bundle-lib_2.11</conductr.lib.name>
+
+        <scala.binary.version>2.11</scala.binary.version>
     </properties>
 </project>
