--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <lagom.version>1.4.0-M3</lagom.version>
+        <lagom.version>1.4.1</lagom.version>
 
         <scala.binary.version>2.11</scala.binary.version>
     </properties>
